# hari

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
clients/ix_reference/: README.md  hari_client.py  run_session.py
crates/hari-cognition/: Cargo.toml
crates/hari-cognition/src/: lib.rs
crates/hari-core/: Cargo.toml
crates/hari-core/src/: lib.rs  main.rs  protocol.rs  session.rs  subjective_logic.rs
crates/hari-core/tests/: phase5_replay.rs  phase6_serve_subprocess.rs  phase6_session.rs  phase7_swarm_bridge.rs  phase8_provenance.rs  phase8_reasoning.rs  phase8_sl_priority_model.rs  subjective_logic_baseline.rs
crates/hari-lattice/: Cargo.toml
crates/hari-lattice/src/: lib.rs  merge.rs
crates/hari-lattice/tests/: hex_merge_conformance.rs
crates/hari-swarm/: Cargo.toml
crates/hari-swarm/src/: lib.rs
docs/automation/: phase5-factory-spec.md
docs/research/: 2026-05-02-sae-contradicts-alignment-prd.md  phase5-fixture-rollup.md  phase5-implementation-plan.md  phase5-output-final.json  phase5-results.md  phase6-design.md  prior-art-survey.md
fixtures/hex-merge/: README.md
fixtures/ix/: cognition_divergence.json  conflicting_benchmark.json  derivation.json  heavy_contradiction.json  long_recovery.json  racing_goals.json  slow_evidence.json  swarm_dissent.json
scripts/: check-phase5-done.sh
