[package]
name = "hari-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core cognitive loop orchestrator for Project Hari AGI research"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
hari-lattice = { workspace = true }
hari-cognition = { workspace = true }
hari-swarm = { workspace = true }
