[package]
name = "hari-lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hexavalent lattice logic engine for AGI belief systems"

[dependencies]
serde = { workspace = true }
petgraph = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
